<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_Title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/courier_service"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_Title">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/delivery_truck"
                    android:contentDescription="@string/app_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/welcome_back"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="30sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_to_continue"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="18sp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp">
                    <LinearLayout
                        android:id="@+id/layout_Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:background="@drawable/background_input"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toTopOf="parent">
                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_marginStart="10dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_email"
                            app:tint="@color/colorAccent" />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:background="@null"
                            android:hint="you@email.com"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionNext"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="41dp"
                        android:background="@color/colorWhite"
                        android:text="@string/email"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:textAllCaps="true"
                        android:textColor="@color/colorTextSecondary"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/layout_Email"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/layout_Email"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp">

                    <LinearLayout
                        android:id="@+id/layout_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/background_input"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="22sp"
                            android:layout_height="22sp"
                            android:layout_marginStart="10dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_lock"
                            app:tint="@color/colorAccent"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:background="@null"
                            android:hint="@string/enter_password"
                            android:textStyle="bold"
                            android:textSize="18sp"
                            android:inputType="textPassword"
                            android:textColor="@color/colorTextSecondary"
                            android:importantForAutofill="no"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:background="@color/colorWhite"
                        android:paddingStart="6dp"
                        android:paddingEnd="6dp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:layout_marginStart="41dp"
                        app:layout_constraintBottom_toTopOf="@id/layout_Password"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/layout_Password"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:layout_gravity="end"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/colorTextSecondary"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="Sign in"
                    android:textSize="18sp"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_account"
                        android:textSize="17sp"
                        android:textColor="@color/colorTextSecondary"/>
                    <TextView
                        android:id="@+id/tv_createAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/create_a_new_account"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="17sp"/>
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>